--- a/games/titans/index.html
+++ b/games/titans/index.html
@@ -81,7 +81,7 @@
     <p style="margin-top: 10px; opacity: 0.7;">請稍候</p>
   </div>
 
-  <script type="module" src="./main.ts"></script>
+  <script type="module" src="/bundle.js"></script>
 </body>
 
 </html>
