--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
+            background: #000000;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -62,45 +62,103 @@
             pointer-events: none;
         }
 
-        .loading-spinner {
-            width: 50px;
-            height: 50px;
-            border: 3px solid #f3f3f3;
-            border-top: 3px solid #667eea;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin-bottom: 20px;
+        .loading-content {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
         }
 
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
+        /* Logo 樣式 */
+        .loading-logo {
+            max-width: 300px;
+            max-height: 150px;
+            margin-bottom: 60px;
+            opacity: 0;
+            animation: fadeIn 0.5s ease-in forwards;
         }
 
-        .loading-text {
+        @keyframes fadeIn {
+            to { opacity: 1; }
+        }
+
+        /* 進度條容器 */
+        .progress-bar-container {
+            position: relative;
+            width: 360px;
+            height: 20px;
+            margin: 20px 0;
+        }
+
+        /* 進度條共用樣式 */
+        .progress-bar-bg,
+        .progress-bar-fill,
+        .progress-bar-effect {
+            position: absolute;
+            inset: 0;
+            background-repeat: no-repeat;
+            background-size: contain;
+        }
+
+        /* 進度條背景框 */
+        .progress-bar-bg {
+            background-image: url('src/assets/background.png');
+            z-index: 0;
+        }
+
+        /* 進度條填充 */
+        .progress-bar-fill {
+            background-image: url('src/assets/bar.png');
+            transform-origin: left center;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-out;
+            animation: progressPulse 1.5s ease-in-out infinite;
+            z-index: 1;
+        }
+
+        /* 進度條效果層 */
+        .progress-bar-effect {
+            background-image: url('src/assets/effect.png');
+            transform-origin: left center;
+            transform: scaleX(0);
+            transition: transform 0.3s ease-out, opacity 0.3s ease-out;
+            opacity: 0.8;
+            mix-blend-mode: screen;
+            animation: progressShine 1.5s ease-in-out infinite;
+            z-index: 2;
+        }
+
+        /* 進度條動畫 */
+        @keyframes progressPulse {
+            0%, 100% { filter: brightness(1); }
+            50% { filter: brightness(1.2); }
+        }
+
+        @keyframes progressShine {
+            0%, 100% { opacity: 0.7; }
+            50% { opacity: 1; }
+        }
+
+
+        /* 載入文字 */
+        .loading-percentage,
+        .loading-message {
+            color: #ffffff;
+        }
+
+        .loading-percentage {
+            font-size: 24px;
+            font-weight: bold;
+            margin-top: 30px;
+            min-height: 30px;
+        }
+
+        .loading-message {
             font-size: 18px;
-            margin-bottom: 10px;
-        }
-
-        .loading-details {
-            font-size: 14px;
             opacity: 0.7;
-            margin-bottom: 20px;
-        }
-
-        .progress-bar {
-            width: 300px;
-            height: 8px;
-            background: rgba(255, 255, 255, 0.2);
-            border-radius: 4px;
-            overflow: hidden;
-        }
-
-        .progress-fill {
-            height: 100%;
-            background: linear-gradient(90deg, #667eea, #764ba2);
-            width: 0%;
-            transition: width 0.3s ease;
+            margin-top: 15px;
+            min-height: 25px;
         }
 
         /* 控制面板 */
@@ -169,8 +227,22 @@
                 gap: 10px;
             }
 
-            .progress-bar {
-                width: 250px;
+            .progress-bar-container {
+                width: 280px;
+            }
+
+            .loading-logo {
+                max-width: 200px;
+                max-height: 100px;
+                margin-bottom: 40px;
+            }
+
+            .loading-percentage {
+                font-size: 20px;
+            }
+
+            .loading-message {
+                font-size: 16px;
             }
         }
     </style>
@@ -182,11 +254,19 @@
         
         <!-- 載入畫面 -->
         <div id="loading-screen">
-            <div class="loading-spinner"></div>
-            <div class="loading-text" id="loading-text">正在初始化遊戲...</div>
-            <div class="loading-details" id="loading-details">載入核心系統</div>
-            <div class="progress-bar">
-                <div class="progress-fill" id="progress-fill"></div>
+            <div class="loading-content">
+                <!-- Logo - 置於正中間 -->
+                <img id="loading-logo" class="loading-logo" src="src/assets/logo.png" alt="Logo" onerror="this.style.display='none'">
+                
+                <!-- 進度條容器 -->
+                <div class="progress-bar-container">
+                    <!-- 背景框 -->
+                    <div class="progress-bar-bg"></div>
+                    <!-- 填充背景 -->
+                    <div class="progress-bar-fill" id="progress-bar-fill"></div>
+                    <!-- 效果層 -->
+                    <div class="progress-bar-effect" id="progress-bar-effect"></div>
+                </div>
             </div>
         </div>
 
